[package]
name = "ror2-yamato-external"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local crates
gui = { path = "gui" }


# public crates
tokio = { version = "1.34.0", features = ["time", "full"] }
toy-arms = { version = "0.9.4", features = ["external"] }
# env_logger = "0.10.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
eframe = "0.25.0"