[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memory = { path = "../memory" }

tokio = { version = "1.34.0", features = ["time", "full"] }
chrono = "0.4"
eframe = "0.24.1"
toy-arms = "0.9.4"