[package]
name = "memory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["time", "full"] }
# toy-arms = "0.9.4"
faithe = "0.8.0"
thiserror = "1.0.50"
quote = "1.0.33"
syn = "2.0.39"
dynasm = "2.0.0"
dynasmrt = "2.0.0"
either = "1.9.0"
aobscan = "0.3"
# winapi = "0.3.9"