[package]
name = "memory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35", features = ["time", "full"] }
# toy-arms = "0.9.4"
faithe = "0.8"
thiserror = "1.0"
quote = "1.0"
syn = "2.0"
dynasm = "2.0"
dynasmrt = "2.0"
either = "1.9"
aobscan = "0.3"
# winapi = "0.3.9"
rayon = "1.8"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
mockall = "0.12"


